--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@themesberg/tailwind-datepicker": "^1.0.1",
     "autoprefixer": "^10.3.7",
     "axios": "^0.23.0",
     "postcss": "^8.3.11",
